--- a/app/src/main/res/layout/image_list_view.xml
+++ b/app/src/main/res/layout/image_list_view.xml
@@ -13,4 +13,18 @@
         android:layout_marginTop="5dp"
         android:src="@drawable/ic_launcher" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:textColor="#256478"
+            android:textSize="20sp" />
+    </LinearLayout>
+
 </LinearLayout>
